Add load functionality

--- a/uml-annotator/MainWindow.xaml
+++ b/uml-annotator/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="UML Annotator" Height="350" Width="525" MinWidth="320" MinHeight="180">
 	<Grid>
-		<Button x:Name="buttonLoad" Content="Load" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="40"/>
+		<Button x:Name="buttonLoad" Content="Load" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="40" Click="buttonLoad_Click"/>
 		<Button x:Name="buttonSave" Content="Save" HorizontalAlignment="Left" Margin="55,10,0,0" VerticalAlignment="Top" Width="40"/>
 		<ComboBox x:Name="comboBox" Margin="100,10,10,0" VerticalAlignment="Top" HorizontalContentAlignment="Stretch"/>
 
