Use UmlClassNode in dictionary and add method selector box.

--- a/uml-annotator/MainWindow.xaml
+++ b/uml-annotator/MainWindow.xaml
@@ -9,7 +9,8 @@
 	<Grid>
 		<Button x:Name="buttonLoad" Content="Load" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="40" Click="buttonLoad_Click"/>
 		<Button x:Name="buttonSave" Content="Save" HorizontalAlignment="Left" Margin="55,10,0,0" VerticalAlignment="Top" Width="40" Click="buttonSave_Click"/>
-		<ComboBox x:Name="comboBox" Margin="100,10,10,0" VerticalAlignment="Top" HorizontalContentAlignment="Stretch" SelectionChanged="comboBox_SelectionChanged"/>
+		<ComboBox x:Name="comboBoxClass" Margin="100,10,10,0" VerticalAlignment="Top" HorizontalContentAlignment="Stretch" SelectionChanged="comboBoxClass_SelectionChanged"/>
+		<ComboBox x:Name="comboBoxMethod" Margin="10,39,10,0" VerticalAlignment="Top"/>
 
 	</Grid>
 </Window>
