--- a/uml-annotator/MainWindow.xaml
+++ b/uml-annotator/MainWindow.xaml
@@ -23,7 +23,7 @@
 		<Button x:Name="buttonAddCondition" Content="+" HorizontalAlignment="Left" Margin="140,115,0,0" VerticalAlignment="Top" Width="20" RenderTransformOrigin="1,0.609" Click="buttonAddCondition_Click"/>
 		<Button x:Name="buttonRemoveCondition" Content="-" HorizontalAlignment="Left" Margin="115,115,0,0" VerticalAlignment="Top" Width="20" RenderTransformOrigin="1,0.609" Click="buttonRemoveCondition_Click"/>
 		<Label x:Name="label2_Copy" Content="Exception:" HorizontalAlignment="Left" Margin="165,283,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Right"/>
-		<TextBox x:Name="textBoxExceptionCondition" HorizontalAlignment="Left" Height="26" Margin="246,283,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="261"/>
+		<TextBox x:Name="textBoxExceptionCondition" HorizontalAlignment="Left" Height="26" Margin="246,283,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="261" TextChanged="textBoxExceptionCondition_TextChanged"/>
 
 	</Grid>
 </Window>
