--- a/uml-annotator/MainWindow.xaml
+++ b/uml-annotator/MainWindow.xaml
@@ -13,18 +13,16 @@
 		<ComboBox x:Name="comboBoxMethod" Margin="70,70,10,0" VerticalAlignment="Top" SelectionChanged="comboBoxMethod_SelectionChanged"/>
 		<Label x:Name="label" Content="Class:" HorizontalAlignment="Left" Margin="10,40,0,0" VerticalAlignment="Top" Width="60"/>
 		<Label x:Name="label_Copy" Content="Method:" HorizontalAlignment="Left" Margin="10,70,0,0" VerticalAlignment="Top" Width="60"/>
-		<RadioButton x:Name="radioButtonPreconditions" Content="Preconditions" HorizontalAlignment="Left" Margin="10,101,0,0" VerticalAlignment="Top" GroupName="conditionType" Checked="radioButtonPreconditions_Checked"/>
-		<RadioButton x:Name="radioButtonPostconditions" Content="Postconditions" HorizontalAlignment="Left" Margin="10,122,0,0" VerticalAlignment="Top" GroupName="conditionType" Checked="radioButtonPostconditions_Checked"/>
-		<ListBox x:Name="listBoxConditions" Margin="10,143,357,10" Padding="0" Width="150" HorizontalAlignment="Left" SelectionChanged="listBoxConditions_SelectionChanged"/>
+		<ListBox x:Name="listBoxPreconditions" Margin="10,132,0,10" Padding="0" Width="150" HorizontalAlignment="Left" SelectionChanged="listBoxPreconditions_SelectionChanged"/>
 		<Label x:Name="label1" Content="Comparator:" HorizontalAlignment="Left" Margin="165,101,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Right"/>
 		<ComboBox x:Name="comboBoxComparator" HorizontalAlignment="Left" Margin="246,101,0,0" VerticalAlignment="Top" Width="206" SelectionChanged="comboBoxComparator_SelectionChanged" Height="26"/>
 		<Label x:Name="label2" Content="Arguments:" HorizontalAlignment="Left" Margin="165,130,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Right"/>
 		<TextBox x:Name="textBoxArguments" HorizontalAlignment="Left" Height="146" Margin="246,132,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="261" AcceptsReturn="True" TextChanged="textBoxArguments_TextChanged"/>
-		<Button x:Name="buttonAddCondition" Content="+" HorizontalAlignment="Left" Margin="140,115,0,0" VerticalAlignment="Top" Width="20" RenderTransformOrigin="1,0.609" Click="buttonAddCondition_Click"/>
-		<Button x:Name="buttonRemoveCondition" Content="-" HorizontalAlignment="Left" Margin="115,115,0,0" VerticalAlignment="Top" Width="20" RenderTransformOrigin="1,0.609" Click="buttonRemoveCondition_Click"/>
+		<Button x:Name="buttonAddPrecondition" Content="+" HorizontalAlignment="Left" Margin="140,104,0,0" VerticalAlignment="Top" Width="20" RenderTransformOrigin="1,0.609" Click="buttonAddPrecondition_Click"/>
+		<Button x:Name="buttonRemovePrecondition" Content="-" HorizontalAlignment="Left" Margin="115,104,0,0" VerticalAlignment="Top" Width="20" RenderTransformOrigin="1,0.609" Click="buttonRemovePrecondition_Click"/>
 		<Label x:Name="label2_Copy" Content="Exception:" HorizontalAlignment="Left" Margin="165,283,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Right"/>
 		<TextBox x:Name="textBoxExceptionCondition" HorizontalAlignment="Left" Height="26" Margin="246,283,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="261" TextChanged="textBoxExceptionCondition_TextChanged"/>
 		<CheckBox x:Name="checkBoxInvertCondition" Content="Invert" HorizontalAlignment="Left" Margin="457,107,0,0" VerticalAlignment="Top" Click="checkBoxInvertCondition_CheckedChanged"/>
-
-    </Grid>
+		<Label x:Name="label3" Content="Preconditions" HorizontalAlignment="Left" Margin="10,102,0,0" VerticalAlignment="Top"/>
+	</Grid>
 </Window>
