--- a/uml-annotator/MainWindow.xaml
+++ b/uml-annotator/MainWindow.xaml
@@ -33,7 +33,7 @@
 		<TextBox x:Name="textBoxExceptionCondition" HorizontalAlignment="Left" Height="26" Margin="259,197,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="248" TextChanged="textBoxExceptionCondition_TextChanged"/>
 		<CheckBox x:Name="checkBoxInvertCondition" Content="Invert" HorizontalAlignment="Left" Margin="462,140,0,0" VerticalAlignment="Top" Click="checkBoxInvertCondition_CheckedChanged"/>
 		<Label x:Name="labelLinkedPreconditions" Content="Linked&#xD;&#xA;Preconditions:" HorizontalAlignment="Left" Margin="165,228,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Right" Height="50"/>
-		<ListBox x:Name="listBoxLinkedPreconditions" HorizontalAlignment="Left" Height="233" Margin="259,228,0,0" VerticalAlignment="Top" Width="248" SelectionMode="Multiple"/>
+		<ListBox x:Name="listBoxLinkedPreconditions" HorizontalAlignment="Left" Height="233" Margin="259,228,0,0" VerticalAlignment="Top" Width="248" SelectionMode="Multiple" SelectionChanged="listBoxLinkedPreconditions_SelectionChanged"/>
 
 	</Grid>
 </Window>
